# itmo_python_backend_course_hw

./: README.md  pyproject.toml
api/app/: contracts.py  main.py  routers.py
api/tests/: integration_test.py  unit_test.py
app/: main.py
app/user/: constants.py  contracts.py  routers.py
app/words/: contracts.py  routers.py
auth/app/: main.py  routers.py
auth/app/user/: constants.py  contracts.py  routers.py
dictionary/app/: main.py  routers.py
dictionary/app/words/: routers.py
dictionary/tests/: integration_test.py  unit_test.py
