[tool.poetry]
name = "BaseApp"
version = "0.0.1"
description = "Base FastAPI app"
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
httpx = "^0.25.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
